ncc/testsuite/positive/bug196.n

using Nemerle.IO;

public class A
{
    public virtual f (x : int, y : string) : int
    {
      printf ("%i %s\n", x, y);
      x * x + y.Length
    }
}

public interface I
{
    f (x : int, y : string) : int;
}

public class B : A, I
{
  public this () { }
}

public module Test
{
  public Main () : void
  {
    def x = B ();

    def y = x.f (10, "XYZ");

    printf ("%i\n", y);
  }
}

/*
BEGIN-OUTPUT
10 XYZ
103
END-OUTPUT
*/
