ncc/testsuite/negative/overloading-01.n
using Nemerle.IO;

class A {}
class B : A {}
class C : B { public this () {} }
 
module M {
  f (_ : A, _ : B) : void {} // H: overload defination
  f (_ : B, _ : A) : void { printf ("OK\n") } // H: overload defination
  public Main () : void 
  {
    f (C (), C ());     // E: typing fails on ambiguity between overloads
  }
}

using M1;
using M2;

interface I1 {}
interface I2 {}
interface I : I1, I2 {}

class MM
{
  static f (_ : I1) : void {} // H: overload defination
  static f (_ : I2) : void {} // H: overload defination
  static m (a : I) : void { MM.f (a) }    // E: typing fails on ambiguity between overloads
}

class M1
{
  public static g (_ : I) : void { } // H: overload defination
}

class M2
{
  public static g (_ : I) : void { } // H: overload defination
}

class M3
{
  static h (a : I) : void { g(a) }    // E: typing fails on ambiguity between overloads
}


namespace ConstVariantAndType
{
  using X;

  class TextView { } // H: overload defination

  variant X
  {
    | TextView // H: overload defination
  }

  module M
  {

   Main () : void
   {
     def x = TextView (); // E: typing fails on ambiguity between overloads
     ()
   }
  }
}


namespace NotExpectVoidInSequence
{
  namespace n1
  {
    class Attribute {} // H: overload defination
  }

  namespace n3
  {
    using n1;
    using System;
    class AA
    {
      Attribute () : void //H: overload defination
      {
        ();
      }
      X () : void
      {
        Attribute (); // E: typing fails on ambiguity between overloads
        ();
      }
      static Main () :  void
      {
        AA().X();
      }
    }
  }
}


public class Bug743 
{
  public this (_ : string) { }          // H: overload defination
  public this (_ : string, _ = "a") { } // H: overload defination
  foo () : void
  {
    _ = Bug743 ("s"); // E: typing fails on amb
  }
}

public class FunctionsOverl
{
  f (_ : int) : void { }
  
  foo () : void
  {
    System.Console.WriteLine (f : double -> void); //E: expected double -> void, got int -> void in type-enforced expression: the types double and int are not compatible
  }
}